[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "fk-steering"
version         = "0.1.0"
description     = "Feynman-Kac steering for diffusion-based protein design"
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.9"

keywords = [
    "protein design", "diffusion models", "Feynman-Kac",
    "sequential Monte Carlo", "computational biology",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
full = [
    # RFdiffusion and ProteinMPNN are installed from source (see README)
    # PyRosetta requires a licence and is also installed from source.
    "hydra-core>=1.3",
    "omegaconf>=2.3",
]
dev = [
    "pytest>=7.4",
    "pytest-cov",
    "black",
    "isort",
    "ruff",
]

[project.scripts]
fk-design = "scripts.fk_binder_design:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fk_steering*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
